CMSC 430 Compiler Theory and Design/Project 3/Project 3 Skeleton Code/parser.output
Grammar

    0 $accept: function $end

    1 function: function_header variables body ';'

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS type ';'

    3 optional_parameters: parameters
    4                    | %empty

    5 parameters: parameters ',' parameter
    6           | parameter

    7 parameter: IDENTIFIER ':' type

    8 variables: variables variable
    9          | %empty

   10 variable: IDENTIFIER ':' type IS statement_
   11         | IDENTIFIER ':' LIST OF type IS list ';'

   12 type: INTEGER
   13     | REAL
   14     | CHARACTER

   15 list: '(' expressions ')'

   16 expressions: expressions ',' expression
   17            | expression

   18 body: BEGIN_ statement_ END

   19 statement_: statement ';'
   20           | error ';'

   21 statement: expression
   22          | WHEN condition ',' expression ':' expression

   23 $@1: %empty

   24 statement: SWITCH expression IS $@1 cases OTHERS ARROW statement_ ENDSWITCH
   25          | IF condition THEN statement_ elsif_clauses ELSE statement_ ENDIF
   26          | FOLD direction operator list_choice ENDFOLD

   27 elsif_clauses: elsif_clauses ELSIF condition THEN statement_
   28              | %empty

   29 cases: cases case
   30      | %empty

   31 case: CASE INT_LITERAL ARROW statement_

   32 direction: LEFT
   33          | RIGHT

   34 operator: ADDOP
   35         | MULOP

   36 list_choice: list
   37            | IDENTIFIER

   38 condition: or_condition

   39 or_condition: or_condition OROP and_condition
   40             | and_condition

   41 and_condition: and_condition ANDOP not_condition
   42              | not_condition

   43 not_condition: NOTOP not_condition
   44              | relation

   45 relation: '(' condition ')'
   46         | expression RELOP expression

   47 expression: expression ADDOP term
   48           | term

   49 term: term MULOP power
   50     | term MODOP power
   51     | power

   52 power: unary EXPOP power
   53      | unary

   54 unary: NEGOP unary
   55      | primary

   56 primary: '(' expression ')'
   57        | INT_LITERAL
   58        | REAL_LITERAL
   59        | CHAR_LITERAL
   60        | IDENTIFIER '(' expression ')'
   61        | IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 15 45 56 60
    ')' (41) 15 45 56 60
    ',' (44) 5 16 22
    ':' (58) 7 10 11 22
    ';' (59) 1 2 11 19 20
    error (256) 20
    IDENTIFIER <iden> (258) 2 7 10 11 37 60 61
    INT_LITERAL <value> (259) 31 57
    REAL_LITERAL <value> (260) 58
    CHAR_LITERAL <value> (261) 59
    ADDOP <oper> (262) 34 47
    MULOP <oper> (263) 35 49
    MODOP <oper> (264) 50
    EXPOP <oper> (265) 52
    NEGOP <oper> (266) 54
    ANDOP <oper> (267) 41
    OROP <oper> (268) 39
    NOTOP <oper> (269) 43
    RELOP <oper> (270) 46
    ARROW (271) 24 31
    BEGIN_ (272) 18
    CASE (273) 31
    CHARACTER (274) 14
    ELSE (275) 25
    ELSIF (276) 27
    END (277) 18
    ENDIF (278) 25
    ENDFOLD (279) 26
    ENDSWITCH (280) 24
    FOLD (281) 26
    FUNCTION (282) 2
    IF (283) 25
    INTEGER (284) 12
    IS (285) 10 11 24
    LEFT (286) 32
    LIST (287) 11
    OF (288) 11
    OTHERS (289) 24
    REAL (290) 13
    RETURNS (291) 2
    RIGHT (292) 33
    SWITCH (293) 24
    THEN (294) 25 27
    WHEN (295) 22


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    function <value> (47)
        on left: 1
        on right: 0
    function_header (48)
        on left: 2
        on right: 1
    optional_parameters (49)
        on left: 3 4
        on right: 2
    parameters (50)
        on left: 5 6
        on right: 3 5
    parameter (51)
        on left: 7
        on right: 5 6
    variables (52)
        on left: 8 9
        on right: 1 8
    variable (53)
        on left: 10 11
        on right: 8
    type (54)
        on left: 12 13 14
        on right: 2 7 10 11
    list <list> (55)
        on left: 15
        on right: 11 36
    expressions <list> (56)
        on left: 16 17
        on right: 15 16
    body <value> (57)
        on left: 18
        on right: 1
    statement_ <value> (58)
        on left: 19 20
        on right: 10 18 24 25 27 31
    statement <value> (59)
        on left: 21 22 24 25 26
        on right: 19
    $@1 (60)
        on left: 23
        on right: 24
    elsif_clauses <value> (61)
        on left: 27 28
        on right: 25 27
    cases <value> (62)
        on left: 29 30
        on right: 24 29
    case <value> (63)
        on left: 31
        on right: 29
    direction <direction> (64)
        on left: 32 33
        on right: 26
    operator <oper> (65)
        on left: 34 35
        on right: 26
    list_choice <list> (66)
        on left: 36 37
        on right: 26
    condition <value> (67)
        on left: 38
        on right: 22 25 27 45
    or_condition <value> (68)
        on left: 39 40
        on right: 38 39
    and_condition <value> (69)
        on left: 41 42
        on right: 39 40 41
    not_condition <value> (70)
        on left: 43 44
        on right: 41 42 43
    relation <value> (71)
        on left: 45 46
        on right: 44
    expression <value> (72)
        on left: 47 48
        on right: 16 17 21 22 24 46 47 56 60
    term <value> (73)
        on left: 49 50 51
        on right: 47 48 49 50
    power <value> (74)
        on left: 52 53
        on right: 49 50 51 52
    unary <value> (75)
        on left: 54 55
        on right: 52 53 54
    primary <value> (76)
        on left: 56 57 58 59 60 61
        on right: 55


State 0

    0 $accept: . function $end

    FUNCTION  shift, and go to state 1

    function         go to state 2
    function_header  go to state 3


State 1

    2 function_header: FUNCTION . IDENTIFIER optional_parameters RETURNS type ';'

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: function . $end

    $end  shift, and go to state 5


State 3

    1 function: function_header . variables body ';'

    $default  reduce using rule 9 (variables)

    variables  go to state 6


State 4

    2 function_header: FUNCTION IDENTIFIER . optional_parameters RETURNS type ';'

    IDENTIFIER  shift, and go to state 7

    $default  reduce using rule 4 (optional_parameters)

    optional_parameters  go to state 8
    parameters           go to state 9
    parameter            go to state 10


State 5

    0 $accept: function $end .

    $default  accept


State 6

    1 function: function_header variables . body ';'
    8 variables: variables . variable

    IDENTIFIER  shift, and go to state 11
    BEGIN_      shift, and go to state 12

    variable  go to state 13
    body      go to state 14


State 7

    7 parameter: IDENTIFIER . ':' type

    ':'  shift, and go to state 15


State 8

    2 function_header: FUNCTION IDENTIFIER optional_parameters . RETURNS type ';'

    RETURNS  shift, and go to state 16


State 9

    3 optional_parameters: parameters .
    5 parameters: parameters . ',' parameter

    ','  shift, and go to state 17

    $default  reduce using rule 3 (optional_parameters)


State 10

    6 parameters: parameter .

    $default  reduce using rule 6 (parameters)


State 11

   10 variable: IDENTIFIER . ':' type IS statement_
   11         | IDENTIFIER . ':' LIST OF type IS list ';'

    ':'  shift, and go to state 18


State 12

   18 body: BEGIN_ . statement_ END

    error         shift, and go to state 19
    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    FOLD          shift, and go to state 25
    IF            shift, and go to state 26
    SWITCH        shift, and go to state 27
    WHEN          shift, and go to state 28
    '('           shift, and go to state 29

    statement_  go to state 30
    statement   go to state 31
    expression  go to state 32
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 13

    8 variables: variables variable .

    $default  reduce using rule 8 (variables)


State 14

    1 function: function_header variables body . ';'

    ';'  shift, and go to state 37


State 15

    7 parameter: IDENTIFIER ':' . type

    CHARACTER  shift, and go to state 38
    INTEGER    shift, and go to state 39
    REAL       shift, and go to state 40

    type  go to state 41


State 16

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS . type ';'

    CHARACTER  shift, and go to state 38
    INTEGER    shift, and go to state 39
    REAL       shift, and go to state 40

    type  go to state 42


State 17

    5 parameters: parameters ',' . parameter

    IDENTIFIER  shift, and go to state 7

    parameter  go to state 43


State 18

   10 variable: IDENTIFIER ':' . type IS statement_
   11         | IDENTIFIER ':' . LIST OF type IS list ';'

    CHARACTER  shift, and go to state 38
    INTEGER    shift, and go to state 39
    LIST       shift, and go to state 44
    REAL       shift, and go to state 40

    type  go to state 45


State 19

   20 statement_: error . ';'

    ';'  shift, and go to state 46


State 20

   60 primary: IDENTIFIER . '(' expression ')'
   61        | IDENTIFIER .

    '('  shift, and go to state 47

    $default  reduce using rule 61 (primary)


State 21

   57 primary: INT_LITERAL .

    $default  reduce using rule 57 (primary)


State 22

   58 primary: REAL_LITERAL .

    $default  reduce using rule 58 (primary)


State 23

   59 primary: CHAR_LITERAL .

    $default  reduce using rule 59 (primary)


State 24

   54 unary: NEGOP . unary

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    unary    go to state 48
    primary  go to state 36


State 25

   26 statement: FOLD . direction operator list_choice ENDFOLD

    LEFT   shift, and go to state 49
    RIGHT  shift, and go to state 50

    direction  go to state 51


State 26

   25 statement: IF . condition THEN statement_ elsif_clauses ELSE statement_ ENDIF

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    NOTOP         shift, and go to state 52
    '('           shift, and go to state 53

    condition      go to state 54
    or_condition   go to state 55
    and_condition  go to state 56
    not_condition  go to state 57
    relation       go to state 58
    expression     go to state 59
    term           go to state 33
    power          go to state 34
    unary          go to state 35
    primary        go to state 36


State 27

   24 statement: SWITCH . expression IS $@1 cases OTHERS ARROW statement_ ENDSWITCH

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    expression  go to state 60
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 28

   22 statement: WHEN . condition ',' expression ':' expression

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    NOTOP         shift, and go to state 52
    '('           shift, and go to state 53

    condition      go to state 61
    or_condition   go to state 55
    and_condition  go to state 56
    not_condition  go to state 57
    relation       go to state 58
    expression     go to state 59
    term           go to state 33
    power          go to state 34
    unary          go to state 35
    primary        go to state 36


State 29

   56 primary: '(' . expression ')'

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    expression  go to state 62
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 30

   18 body: BEGIN_ statement_ . END

    END  shift, and go to state 63


State 31

   19 statement_: statement . ';'

    ';'  shift, and go to state 64


State 32

   21 statement: expression .
   47 expression: expression . ADDOP term

    ADDOP  shift, and go to state 65

    $default  reduce using rule 21 (statement)


State 33

   48 expression: term .
   49 term: term . MULOP power
   50     | term . MODOP power

    MULOP  shift, and go to state 66
    MODOP  shift, and go to state 67

    $default  reduce using rule 48 (expression)


State 34

   51 term: power .

    $default  reduce using rule 51 (term)


State 35

   52 power: unary . EXPOP power
   53      | unary .

    EXPOP  shift, and go to state 68

    $default  reduce using rule 53 (power)


State 36

   55 unary: primary .

    $default  reduce using rule 55 (unary)


State 37

    1 function: function_header variables body ';' .

    $default  reduce using rule 1 (function)


State 38

   14 type: CHARACTER .

    $default  reduce using rule 14 (type)


State 39

   12 type: INTEGER .

    $default  reduce using rule 12 (type)


State 40

   13 type: REAL .

    $default  reduce using rule 13 (type)


State 41

    7 parameter: IDENTIFIER ':' type .

    $default  reduce using rule 7 (parameter)


State 42

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS type . ';'

    ';'  shift, and go to state 69


State 43

    5 parameters: parameters ',' parameter .

    $default  reduce using rule 5 (parameters)


State 44

   11 variable: IDENTIFIER ':' LIST . OF type IS list ';'

    OF  shift, and go to state 70


State 45

   10 variable: IDENTIFIER ':' type . IS statement_

    IS  shift, and go to state 71


State 46

   20 statement_: error ';' .

    $default  reduce using rule 20 (statement_)


State 47

   60 primary: IDENTIFIER '(' . expression ')'

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    expression  go to state 72
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 48

   54 unary: NEGOP unary .

    $default  reduce using rule 54 (unary)


State 49

   32 direction: LEFT .

    $default  reduce using rule 32 (direction)


State 50

   33 direction: RIGHT .

    $default  reduce using rule 33 (direction)


State 51

   26 statement: FOLD direction . operator list_choice ENDFOLD

    ADDOP  shift, and go to state 73
    MULOP  shift, and go to state 74

    operator  go to state 75


State 52

   43 not_condition: NOTOP . not_condition

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    NOTOP         shift, and go to state 52
    '('           shift, and go to state 53

    not_condition  go to state 76
    relation       go to state 58
    expression     go to state 59
    term           go to state 33
    power          go to state 34
    unary          go to state 35
    primary        go to state 36


State 53

   45 relation: '(' . condition ')'
   56 primary: '(' . expression ')'

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    NOTOP         shift, and go to state 52
    '('           shift, and go to state 53

    condition      go to state 77
    or_condition   go to state 55
    and_condition  go to state 56
    not_condition  go to state 57
    relation       go to state 58
    expression     go to state 78
    term           go to state 33
    power          go to state 34
    unary          go to state 35
    primary        go to state 36


State 54

   25 statement: IF condition . THEN statement_ elsif_clauses ELSE statement_ ENDIF

    THEN  shift, and go to state 79


State 55

   38 condition: or_condition .
   39 or_condition: or_condition . OROP and_condition

    OROP  shift, and go to state 80

    $default  reduce using rule 38 (condition)


State 56

   40 or_condition: and_condition .
   41 and_condition: and_condition . ANDOP not_condition

    ANDOP  shift, and go to state 81

    $default  reduce using rule 40 (or_condition)


State 57

   42 and_condition: not_condition .

    $default  reduce using rule 42 (and_condition)


State 58

   44 not_condition: relation .

    $default  reduce using rule 44 (not_condition)


State 59

   46 relation: expression . RELOP expression
   47 expression: expression . ADDOP term

    ADDOP  shift, and go to state 65
    RELOP  shift, and go to state 82


State 60

   24 statement: SWITCH expression . IS $@1 cases OTHERS ARROW statement_ ENDSWITCH
   47 expression: expression . ADDOP term

    ADDOP  shift, and go to state 65
    IS     shift, and go to state 83


State 61

   22 statement: WHEN condition . ',' expression ':' expression

    ','  shift, and go to state 84


State 62

   47 expression: expression . ADDOP term
   56 primary: '(' expression . ')'

    ADDOP  shift, and go to state 65
    ')'    shift, and go to state 85


State 63

   18 body: BEGIN_ statement_ END .

    $default  reduce using rule 18 (body)


State 64

   19 statement_: statement ';' .

    $default  reduce using rule 19 (statement_)


State 65

   47 expression: expression ADDOP . term

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    term     go to state 86
    power    go to state 34
    unary    go to state 35
    primary  go to state 36


State 66

   49 term: term MULOP . power

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    power    go to state 87
    unary    go to state 35
    primary  go to state 36


State 67

   50 term: term MODOP . power

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    power    go to state 88
    unary    go to state 35
    primary  go to state 36


State 68

   52 power: unary EXPOP . power

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    power    go to state 89
    unary    go to state 35
    primary  go to state 36


State 69

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS type ';' .

    $default  reduce using rule 2 (function_header)


State 70

   11 variable: IDENTIFIER ':' LIST OF . type IS list ';'

    CHARACTER  shift, and go to state 38
    INTEGER    shift, and go to state 39
    REAL       shift, and go to state 40

    type  go to state 90


State 71

   10 variable: IDENTIFIER ':' type IS . statement_

    error         shift, and go to state 19
    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    FOLD          shift, and go to state 25
    IF            shift, and go to state 26
    SWITCH        shift, and go to state 27
    WHEN          shift, and go to state 28
    '('           shift, and go to state 29

    statement_  go to state 91
    statement   go to state 31
    expression  go to state 32
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 72

   47 expression: expression . ADDOP term
   60 primary: IDENTIFIER '(' expression . ')'

    ADDOP  shift, and go to state 65
    ')'    shift, and go to state 92


State 73

   34 operator: ADDOP .

    $default  reduce using rule 34 (operator)


State 74

   35 operator: MULOP .

    $default  reduce using rule 35 (operator)


State 75

   26 statement: FOLD direction operator . list_choice ENDFOLD

    IDENTIFIER  shift, and go to state 93
    '('         shift, and go to state 94

    list         go to state 95
    list_choice  go to state 96


State 76

   43 not_condition: NOTOP not_condition .

    $default  reduce using rule 43 (not_condition)


State 77

   45 relation: '(' condition . ')'

    ')'  shift, and go to state 97


State 78

   46 relation: expression . RELOP expression
   47 expression: expression . ADDOP term
   56 primary: '(' expression . ')'

    ADDOP  shift, and go to state 65
    RELOP  shift, and go to state 82
    ')'    shift, and go to state 85


State 79

   25 statement: IF condition THEN . statement_ elsif_clauses ELSE statement_ ENDIF

    error         shift, and go to state 19
    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    FOLD          shift, and go to state 25
    IF            shift, and go to state 26
    SWITCH        shift, and go to state 27
    WHEN          shift, and go to state 28
    '('           shift, and go to state 29

    statement_  go to state 98
    statement   go to state 31
    expression  go to state 32
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 80

   39 or_condition: or_condition OROP . and_condition

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    NOTOP         shift, and go to state 52
    '('           shift, and go to state 53

    and_condition  go to state 99
    not_condition  go to state 57
    relation       go to state 58
    expression     go to state 59
    term           go to state 33
    power          go to state 34
    unary          go to state 35
    primary        go to state 36


State 81

   41 and_condition: and_condition ANDOP . not_condition

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    NOTOP         shift, and go to state 52
    '('           shift, and go to state 53

    not_condition  go to state 100
    relation       go to state 58
    expression     go to state 59
    term           go to state 33
    power          go to state 34
    unary          go to state 35
    primary        go to state 36


State 82

   46 relation: expression RELOP . expression

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    expression  go to state 101
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 83

   24 statement: SWITCH expression IS . $@1 cases OTHERS ARROW statement_ ENDSWITCH

    $default  reduce using rule 23 ($@1)

    $@1  go to state 102


State 84

   22 statement: WHEN condition ',' . expression ':' expression

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    expression  go to state 103
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 85

   56 primary: '(' expression ')' .

    $default  reduce using rule 56 (primary)


State 86

   47 expression: expression ADDOP term .
   49 term: term . MULOP power
   50     | term . MODOP power

    MULOP  shift, and go to state 66
    MODOP  shift, and go to state 67

    $default  reduce using rule 47 (expression)


State 87

   49 term: term MULOP power .

    $default  reduce using rule 49 (term)


State 88

   50 term: term MODOP power .

    $default  reduce using rule 50 (term)


State 89

   52 power: unary EXPOP power .

    $default  reduce using rule 52 (power)


State 90

   11 variable: IDENTIFIER ':' LIST OF type . IS list ';'

    IS  shift, and go to state 104


State 91

   10 variable: IDENTIFIER ':' type IS statement_ .

    $default  reduce using rule 10 (variable)


State 92

   60 primary: IDENTIFIER '(' expression ')' .

    $default  reduce using rule 60 (primary)


State 93

   37 list_choice: IDENTIFIER .

    $default  reduce using rule 37 (list_choice)


State 94

   15 list: '(' . expressions ')'

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    expressions  go to state 105
    expression   go to state 106
    term         go to state 33
    power        go to state 34
    unary        go to state 35
    primary      go to state 36


State 95

   36 list_choice: list .

    $default  reduce using rule 36 (list_choice)


State 96

   26 statement: FOLD direction operator list_choice . ENDFOLD

    ENDFOLD  shift, and go to state 107


State 97

   45 relation: '(' condition ')' .

    $default  reduce using rule 45 (relation)


State 98

   25 statement: IF condition THEN statement_ . elsif_clauses ELSE statement_ ENDIF

    $default  reduce using rule 28 (elsif_clauses)

    elsif_clauses  go to state 108


State 99

   39 or_condition: or_condition OROP and_condition .
   41 and_condition: and_condition . ANDOP not_condition

    ANDOP  shift, and go to state 81

    $default  reduce using rule 39 (or_condition)


State 100

   41 and_condition: and_condition ANDOP not_condition .

    $default  reduce using rule 41 (and_condition)


State 101

   46 relation: expression RELOP expression .
   47 expression: expression . ADDOP term

    ADDOP  shift, and go to state 65

    $default  reduce using rule 46 (relation)


State 102

   24 statement: SWITCH expression IS $@1 . cases OTHERS ARROW statement_ ENDSWITCH

    $default  reduce using rule 30 (cases)

    cases  go to state 109


State 103

   22 statement: WHEN condition ',' expression . ':' expression
   47 expression: expression . ADDOP term

    ADDOP  shift, and go to state 65
    ':'    shift, and go to state 110


State 104

   11 variable: IDENTIFIER ':' LIST OF type IS . list ';'

    '('  shift, and go to state 94

    list  go to state 111


State 105

   15 list: '(' expressions . ')'
   16 expressions: expressions . ',' expression

    ','  shift, and go to state 112
    ')'  shift, and go to state 113


State 106

   17 expressions: expression .
   47 expression: expression . ADDOP term

    ADDOP  shift, and go to state 65

    $default  reduce using rule 17 (expressions)


State 107

   26 statement: FOLD direction operator list_choice ENDFOLD .

    $default  reduce using rule 26 (statement)


State 108

   25 statement: IF condition THEN statement_ elsif_clauses . ELSE statement_ ENDIF
   27 elsif_clauses: elsif_clauses . ELSIF condition THEN statement_

    ELSE   shift, and go to state 114
    ELSIF  shift, and go to state 115


State 109

   24 statement: SWITCH expression IS $@1 cases . OTHERS ARROW statement_ ENDSWITCH
   29 cases: cases . case

    CASE    shift, and go to state 116
    OTHERS  shift, and go to state 117

    case  go to state 118


State 110

   22 statement: WHEN condition ',' expression ':' . expression

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    expression  go to state 119
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 111

   11 variable: IDENTIFIER ':' LIST OF type IS list . ';'

    ';'  shift, and go to state 120


State 112

   16 expressions: expressions ',' . expression

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 29

    expression  go to state 121
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 113

   15 list: '(' expressions ')' .

    $default  reduce using rule 15 (list)


State 114

   25 statement: IF condition THEN statement_ elsif_clauses ELSE . statement_ ENDIF

    error         shift, and go to state 19
    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    FOLD          shift, and go to state 25
    IF            shift, and go to state 26
    SWITCH        shift, and go to state 27
    WHEN          shift, and go to state 28
    '('           shift, and go to state 29

    statement_  go to state 122
    statement   go to state 31
    expression  go to state 32
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 115

   27 elsif_clauses: elsif_clauses ELSIF . condition THEN statement_

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    NOTOP         shift, and go to state 52
    '('           shift, and go to state 53

    condition      go to state 123
    or_condition   go to state 55
    and_condition  go to state 56
    not_condition  go to state 57
    relation       go to state 58
    expression     go to state 59
    term           go to state 33
    power          go to state 34
    unary          go to state 35
    primary        go to state 36


State 116

   31 case: CASE . INT_LITERAL ARROW statement_

    INT_LITERAL  shift, and go to state 124


State 117

   24 statement: SWITCH expression IS $@1 cases OTHERS . ARROW statement_ ENDSWITCH

    ARROW  shift, and go to state 125


State 118

   29 cases: cases case .

    $default  reduce using rule 29 (cases)


State 119

   22 statement: WHEN condition ',' expression ':' expression .
   47 expression: expression . ADDOP term

    ADDOP  shift, and go to state 65

    $default  reduce using rule 22 (statement)


State 120

   11 variable: IDENTIFIER ':' LIST OF type IS list ';' .

    $default  reduce using rule 11 (variable)


State 121

   16 expressions: expressions ',' expression .
   47 expression: expression . ADDOP term

    ADDOP  shift, and go to state 65

    $default  reduce using rule 16 (expressions)


State 122

   25 statement: IF condition THEN statement_ elsif_clauses ELSE statement_ . ENDIF

    ENDIF  shift, and go to state 126


State 123

   27 elsif_clauses: elsif_clauses ELSIF condition . THEN statement_

    THEN  shift, and go to state 127


State 124

   31 case: CASE INT_LITERAL . ARROW statement_

    ARROW  shift, and go to state 128


State 125

   24 statement: SWITCH expression IS $@1 cases OTHERS ARROW . statement_ ENDSWITCH

    error         shift, and go to state 19
    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    FOLD          shift, and go to state 25
    IF            shift, and go to state 26
    SWITCH        shift, and go to state 27
    WHEN          shift, and go to state 28
    '('           shift, and go to state 29

    statement_  go to state 129
    statement   go to state 31
    expression  go to state 32
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 126

   25 statement: IF condition THEN statement_ elsif_clauses ELSE statement_ ENDIF .

    $default  reduce using rule 25 (statement)


State 127

   27 elsif_clauses: elsif_clauses ELSIF condition THEN . statement_

    error         shift, and go to state 19
    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    FOLD          shift, and go to state 25
    IF            shift, and go to state 26
    SWITCH        shift, and go to state 27
    WHEN          shift, and go to state 28
    '('           shift, and go to state 29

    statement_  go to state 130
    statement   go to state 31
    expression  go to state 32
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 128

   31 case: CASE INT_LITERAL ARROW . statement_

    error         shift, and go to state 19
    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    REAL_LITERAL  shift, and go to state 22
    CHAR_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    FOLD          shift, and go to state 25
    IF            shift, and go to state 26
    SWITCH        shift, and go to state 27
    WHEN          shift, and go to state 28
    '('           shift, and go to state 29

    statement_  go to state 131
    statement   go to state 31
    expression  go to state 32
    term        go to state 33
    power       go to state 34
    unary       go to state 35
    primary     go to state 36


State 129

   24 statement: SWITCH expression IS $@1 cases OTHERS ARROW statement_ . ENDSWITCH

    ENDSWITCH  shift, and go to state 132


State 130

   27 elsif_clauses: elsif_clauses ELSIF condition THEN statement_ .

    $default  reduce using rule 27 (elsif_clauses)


State 131

   31 case: CASE INT_LITERAL ARROW statement_ .

    $default  reduce using rule 31 (case)


State 132

   24 statement: SWITCH expression IS $@1 cases OTHERS ARROW statement_ ENDSWITCH .

    $default  reduce using rule 24 (statement)
